hexa-tree.ipynb - improve the description

--- a/hexa-tree.ipynb
+++ b/hexa-tree.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Some code..."
+    "## Hexa-Tree\n",
+    "\n",
+    "This is an interactive canvas for the \"Pascalian puzzle\" described in [Mathologer \"Secret of row 10: a new visual key to ancient Pascalian puzzles\"](https://www.youtube.com/watch?v=9JN5f7_3YmQ)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some code..."
    ]
   },
   {
@@ -19,7 +28,7 @@
     "from ipycanvas import MultiCanvas, hold_canvas\n",
     "\n",
     "s3 = math.sqrt(3)\n",
-    "size = 700\n",
+    "size = 500\n",
     "border = 30\n",
     "csize = size + 2 * border\n",
     "\n",
@@ -156,7 +165,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### More code..."
+    "#### More code...\n",
+    "\n",
+    "The array `A` below defines the colors of the lower row (now it's 28 red and yellow hexagons).\n",
+    "If the row's size is \"magic\" then the color of the top hexagon color is determined by lower left and right hexagons ONLY. The \"magic\" sizes are 4, 10, 28, 82, ...\n",
+    "<br>See the abovementioned Youtube video for the explanation.\n",
+    "\n",
+    "**Note**: If the canvas starts blinking or otherwise malfunctioning just rerun it with \"Kernel/Restart & Run All\" menu command.\n",
+    "<br>Unfortunately, with large size jupyter breaks with some cryptic messages (thus, size=82 will not work)."
    ]
   },
   {
@@ -167,8 +183,8 @@
    "source": [
     "c.clear()\n",
     "\n",
-    "# 2, 4, 10, 28, 82 are the \"magic\" sizes (with 82 it breaks...)\n",
-    "A = [2, 0] * 14\n",
+    "# 4, 10, 28, 82 are the \"magic\" sizes\n",
+    "A = [0, 2] * 14\n",
     "\n",
     "B, C = draw_bottom_up(A, c)\n",
     "star(len(A), c)\n",
@@ -228,7 +244,7 @@
    "source": [
     "### And finally, the tree\n",
     "\n",
-    "And all the sides are clickable!"
+    "All the sides are clickable!"
    ]
   },
   {
@@ -243,11 +259,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Triangle calculation as a reversible tranformation\n",
+    "\n",
+    "Note that each trianlge side determines the color of all the rest hexagons, including other two sides (if the color combination rule is aplied, not a \"mod3\" rule). Therefore this can be viewed as a reversible transformation of a row consisting of \\[012\\] digits.\n",
+    "\n",
+    "Indeed, you can easily verify that in many cases one side has simpler pattern that the two others (e.g. in terms of \"Run Length Encoder\", RLE complexity). Hence the idea for a compression algorithm &ndash; get the data, encode it as a 3-base number, run the calculation and then choose which of the resulted \"sides\" can be compressed more.\n",
+    "\n",
+    "However, unlike [BWT](https://en.wikipedia.org/wiki/Burrows%E2%80%93Wheeler_transform) this transform must show much less power (and BWT is much faster and has application for inexact pattern matching)."
+   ]
   }
  ],
  "metadata": {
