hexa-tree.ipynb - reset state with a click on the star

--- a/hexa-tree.ipynb
+++ b/hexa-tree.ipynb
@@ -6,14 +6,9 @@
    "source": [
     "## Hexa-Tree\n",
     "\n",
-    "This is an interactive canvas for the \"Pascalian puzzle\" described in [Mathologer \"Secret of row 10: a new visual key to ancient Pascalian puzzles\"](https://www.youtube.com/watch?v=9JN5f7_3YmQ)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Some code..."
+    "This is an interactive canvas for the puzzle described in [Mathologer \"Secret of row 10: a new visual key to ancient Pascalian puzzles\"](https://www.youtube.com/watch?v=9JN5f7_3YmQ).\n",
+    "\n",
+    "#### Below is some code..."
    ]
   },
   {
@@ -171,8 +166,7 @@
     "If the row's size is \"magic\" then the color of the top hexagon color is determined by lower left and right hexagons ONLY. The \"magic\" sizes are 4, 10, 28, 82, ...\n",
     "<br>See the abovementioned Youtube video for the explanation.\n",
     "\n",
-    "**Note**: If the canvas starts blinking or otherwise malfunctioning just rerun it with \"Kernel/Restart & Run All\" menu command.\n",
-    "<br>Unfortunately, with large size jupyter breaks with some cryptic messages (thus, size=82 will not work)."
+    "**Note:** Unfortunately, with large size jupyter breaks with some cryptic messages (thus, size=82 will not work)."
    ]
   },
   {
@@ -214,6 +208,11 @@
     "        y -= border\n",
     "        i = int(x / step_x)\n",
     "        j = int(y / step_y)\n",
+    "        if n / 2 - 1 <= i <= n / 2 + 1 and j >= n:\n",
+    "            A = [1] * len(A)\n",
+    "            B, C = draw_bottom_up(A, c)\n",
+    "            interaction_layer.clear()\n",
+    "            return\n",
     "        if i < 0 or i > len(A):\n",
     "            return\n",
     "        if j < 1:\n",
@@ -244,7 +243,10 @@
    "source": [
     "### And finally, the tree\n",
     "\n",
-    "All the sides are clickable!"
+    "All the sides are clickable!\n",
+    "<br>Click on the start to reset the state.\n",
+    "\n",
+    "**Note**: If the canvas starts blinking or otherwise malfunctioning just rerun it with \">>\" toolbar button or \"Kernel/Restart & Run All\" menu command."
    ]
   },
   {
