README.md - fix typo, add preview picture

--- a/hexa-tree.ipynb
+++ b/hexa-tree.ipynb
@@ -270,7 +270,7 @@
     "\n",
     "Indeed, you can easily verify that in many cases one side has simpler pattern that the two others (e.g. in terms of \"Run Length Encoder\", RLE complexity). Hence the idea for a compression algorithm &ndash; get the data, encode it as a 3-base number, run the calculation and then choose which of the resulted \"sides\" can be compressed more.\n",
     "\n",
-    "However, unlike [BWT](https://en.wikipedia.org/wiki/Burrows%E2%80%93Wheeler_transform) this transform must show much less power (and BWT is much faster and has application for inexact pattern matching)."
+    "However, unlike [BWT](https://en.wikipedia.org/wiki/Burrows%E2%80%93Wheeler_transform) this transform must show much less power (plus BWT is much faster and has application for inexact pattern matching)."
    ]
   }
  ],
